llm/searxng/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: llm
  labels:
    app: searxng
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      nodeSelector:
        kubernetes.io/hostname: rocks
      containers:
      - name: searxng
        image: docker.io/searxng/searxng:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        startupProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: "1"
            memory: 512Mi
        volumeMounts:
        - mountPath: /etc/searxng/settings.yml
          name: config-volume
          subPath: settings.yml
      volumes:
      - name: config-volume
        secret:
          secretName: searxng-config
